--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Edit/StashEditViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Edit/StashEditViewController.xib
@@ -20,7 +20,7 @@
                 <outlet property="stashDescriptionTextView" destination="eRx-Xd-1Vr" id="Gba-Og-c3E"/>
                 <outlet property="stashImageView" destination="vaQ-B7-x9f" id="P4M-x3-gMh"/>
                 <outlet property="stashNameTextField" destination="dro-1K-QUN" id="HVx-fJ-xIt"/>
-                <outlet property="stashTypeLabel" destination="73d-7W-eih" id="diA-vI-tG1"/>
+                <outlet property="stashTypeTextField" destination="UhK-qU-goz" id="c4q-9k-SsH"/>
                 <outlet property="typeTitleLabel" destination="Re6-g6-fYY" id="lYK-RE-vKW"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -145,12 +145,11 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lc9-wE-275">
                                             <rect key="frame" x="0.0" y="23" width="361" height="24"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73d-7W-eih">
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UhK-qU-goz">
                                                     <rect key="frame" x="0.0" y="0.0" width="337" height="24"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="PFu-89-6Qi">
                                                     <rect key="frame" x="337" y="5.3333333333333321" width="24" height="14"/>
                                                     <color key="tintColor" red="0.0078431372550000003" green="0.18823529410000001" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -174,6 +173,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="56"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
+                                    <connections>
+                                        <action selector="changeType:" destination="-1" eventType="touchUpInside" id="qdS-si-Z6M"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -295,7 +297,7 @@
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
