--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/ArticlesViewController.xib
@@ -49,6 +49,9 @@
                                     <rect key="frame" x="16" y="0.0" width="297" height="32"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <action selector="filterArticles:" destination="-1" eventType="editingChanged" id="Na0-Lp-cZu"/>
+                                    </connections>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hrF-p6-u18">
                                     <rect key="frame" x="317" y="0.0" width="32" height="32"/>
