--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Detail/ArticleDetailViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Detail/ArticleDetailViewController.xib
@@ -15,8 +15,29 @@
                 <outlet property="articleImageView" destination="fZS-eH-eef" id="9Wk-iM-dBA"/>
                 <outlet property="articleNameLabel" destination="VRN-gj-kJw" id="MhC-8O-bPW"/>
                 <outlet property="articleTypeLabel" destination="dbS-E6-buA" id="yUy-6c-Ii8"/>
+                <outlet property="brandLabel" destination="MG5-k6-UfQ" id="pEG-sV-kdj"/>
+                <outlet property="brandTitleLabel" destination="bVx-2g-bCO" id="Odt-o7-yRt"/>
+                <outlet property="brandView" destination="drd-Kv-rRX" id="qKk-uk-5Kc"/>
+                <outlet property="colorLabel" destination="K6m-GT-F0Z" id="I4g-5p-2af"/>
+                <outlet property="colorTitleLabel" destination="WRo-Rg-opf" id="lHy-bd-lK6"/>
+                <outlet property="colorView" destination="m5L-mM-gYi" id="qet-EU-6Zg"/>
                 <outlet property="descriptionTitleLabel" destination="fkQ-sy-GsN" id="bC0-ht-WMe"/>
+                <outlet property="expirationDateLabel" destination="wFO-Ce-dyl" id="kYi-UW-kOu"/>
+                <outlet property="expirationDateTitleLabel" destination="fHh-IU-YdV" id="UPa-DL-YPZ"/>
+                <outlet property="expirationDateView" destination="FLj-e5-sUd" id="jqd-rn-Bjv"/>
+                <outlet property="isSpiceLabel" destination="Eid-TV-WvH" id="M9s-AT-5Ik"/>
+                <outlet property="isSpiceTitleLabel" destination="aro-uB-a6M" id="9X9-mW-dJm"/>
+                <outlet property="isSpiceView" destination="hpT-x0-DSD" id="3b9-Vh-9os"/>
+                <outlet property="isSpicyLabel" destination="sRM-2G-ld6" id="P5c-rI-S3P"/>
+                <outlet property="isSpicyTitleLabel" destination="4dy-dc-FGI" id="ee1-wY-NR6"/>
+                <outlet property="isSpicyView" destination="UG2-m5-W1M" id="UYI-tk-kYK"/>
+                <outlet property="materialLabel" destination="i2N-YM-uc1" id="wIA-EP-AMv"/>
+                <outlet property="materialTitleLabel" destination="8ve-bf-EJp" id="RVz-Hl-xEd"/>
+                <outlet property="materialView" destination="Zik-Ng-iIJ" id="8ml-or-FuD"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weightLabel" destination="ahg-k3-gT4" id="b7v-P2-vRi"/>
+                <outlet property="weightTitleLabel" destination="8sl-L4-HPz" id="t4E-IL-Css"/>
+                <outlet property="weightView" destination="O8f-Co-a55" id="Ttb-hF-LdA"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -38,7 +59,7 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="390-65-9nb">
-                    <rect key="frame" x="16" y="240" width="361" height="196"/>
+                    <rect key="frame" x="16" y="240" width="361" height="642"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VRN-gj-kJw">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="50"/>
@@ -62,6 +83,140 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRj-Qp-tmr">
+                                    <rect key="frame" x="0.0" y="64" width="361" height="0.0"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="QmF-AQ-DdD">
+                            <rect key="frame" x="0.0" y="212" width="361" height="106"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="O8f-Co-a55">
+                                    <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="106"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8sl-L4-HPz">
+                                            <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahg-k3-gT4">
+                                            <rect key="frame" x="0.0" y="56" width="180.66666666666666" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="drd-Kv-rRX">
+                                    <rect key="frame" x="180.66666666666663" y="0.0" width="180.33333333333337" height="106"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVx-2g-bCO">
+                                            <rect key="frame" x="0.0" y="0.0" width="180.33333333333334" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MG5-k6-UfQ">
+                                            <rect key="frame" x="0.0" y="56" width="180.33333333333334" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="3TL-Cj-xfm">
+                            <rect key="frame" x="0.0" y="334" width="361" height="106"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="m5L-mM-gYi">
+                                    <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="106"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRo-Rg-opf">
+                                            <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6m-GT-F0Z">
+                                            <rect key="frame" x="0.0" y="56" width="180.66666666666666" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Zik-Ng-iIJ">
+                                    <rect key="frame" x="180.66666666666663" y="0.0" width="180.33333333333337" height="106"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ve-bf-EJp">
+                                            <rect key="frame" x="0.0" y="0.0" width="180.33333333333334" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i2N-YM-uc1">
+                                            <rect key="frame" x="0.0" y="56" width="180.33333333333334" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="QXO-9J-Y76">
+                            <rect key="frame" x="0.0" y="456" width="361" height="106"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="hpT-x0-DSD">
+                                    <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="106"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aro-uB-a6M">
+                                            <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eid-TV-WvH">
+                                            <rect key="frame" x="0.0" y="56" width="180.66666666666666" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="UG2-m5-W1M">
+                                    <rect key="frame" x="180.66666666666663" y="0.0" width="180.33333333333337" height="106"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4dy-dc-FGI">
+                                            <rect key="frame" x="0.0" y="0.0" width="180.33333333333334" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRM-2G-ld6">
+                                            <rect key="frame" x="0.0" y="56" width="180.33333333333334" height="50"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="FLj-e5-sUd">
+                            <rect key="frame" x="0.0" y="578" width="361" height="64"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHh-IU-YdV">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="50"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wFO-Ce-dyl">
                                     <rect key="frame" x="0.0" y="64" width="361" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
