--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Edit/ArticleEditViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Edit/ArticleEditViewController.xib
@@ -14,7 +14,7 @@
                 <outlet property="articleDescriptionTextView" destination="xoX-QC-YFZ" id="BfN-NB-Zbu"/>
                 <outlet property="articleImageView" destination="Khe-jN-xAk" id="2QK-7W-33D"/>
                 <outlet property="articleNameTextField" destination="Ddu-TW-Ouo" id="RVf-tE-XGd"/>
-                <outlet property="articleTypeLabel" destination="tUK-KM-SUu" id="ZgE-Fz-qSH"/>
+                <outlet property="articleTypeTextField" destination="XyC-ax-Paf" id="Xws-Ll-o1t"/>
                 <outlet property="cancelEditLabel" destination="WVy-DS-fWM" id="6eI-4v-P7S"/>
                 <outlet property="cancelEditView" destination="z7h-g1-Ccu" id="i3i-fv-CEl"/>
                 <outlet property="descriptionTitleLabel" destination="nfX-38-b1L" id="fkU-x4-tmG"/>
@@ -78,12 +78,11 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d77-5B-qJa">
                                             <rect key="frame" x="0.0" y="23" width="361" height="24"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUK-KM-SUu">
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XyC-ax-Paf">
                                                     <rect key="frame" x="0.0" y="0.0" width="337" height="24"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="rlV-3L-jcp">
                                                     <rect key="frame" x="337" y="5.3333333333333321" width="24" height="14"/>
                                                     <color key="tintColor" red="0.0078431372550000003" green="0.18823529410000001" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -107,6 +106,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="56"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
+                                    <connections>
+                                        <action selector="changeType:" destination="-1" eventType="touchUpInside" id="S9G-0P-eR3"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
