--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Edit/ArticleEditViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Edit/ArticleEditViewController.xib
@@ -408,6 +408,7 @@
                 <constraint firstItem="LrF-Nb-JYs" firstAttribute="leading" secondItem="k2z-MM-10G" secondAttribute="leading" id="bIk-Lt-26r"/>
                 <constraint firstItem="LrF-Nb-JYs" firstAttribute="top" secondItem="k2z-MM-10G" secondAttribute="bottom" id="fVi-zi-VNO"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="L3X-aM-Mur" secondAttribute="trailing" constant="16" id="iq2-zL-ODh"/>
+                <constraint firstItem="L3X-aM-Mur" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jUu-1Y-3he" secondAttribute="bottom" id="u3Z-j1-8Y1"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="jUu-1Y-3he" secondAttribute="trailing" constant="16" id="uZ7-0h-dtH"/>
             </constraints>
             <point key="canvasLocation" x="236" y="10"/>
@@ -426,7 +427,7 @@
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
