--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Login/LoginViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Login/LoginViewController.xib
@@ -150,7 +150,7 @@
                         </view>
                     </subviews>
                 </stackView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Sd-1Z-jxq">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Sd-1Z-jxq">
                     <rect key="frame" x="0.0" y="593.33333333333337" width="393" height="2"/>
                     <color key="backgroundColor" name="SkyBlue"/>
                     <constraints>
@@ -211,7 +211,7 @@
                         </view>
                     </subviews>
                 </stackView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xx-va-8fe">
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xx-va-8fe">
                     <rect key="frame" x="119" y="611.33333333333337" width="155" height="34"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krT-jh-uW3">
