Add logic to edit article and add in stash or room DB Add logic to edit stash and add on room DB Add logic to edit user DB Add cámera

--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Detail/ArticleDetailViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Articles/Detail/ArticleDetailViewController.xib
@@ -24,7 +24,7 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fZS-eH-eef">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fZS-eH-eef">
                     <rect key="frame" x="0.0" y="60" width="393" height="164"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="164" id="KbS-Om-xuO"/>
