--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Edit/HomeEditViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Home/Edit/HomeEditViewController.xib
@@ -60,6 +60,9 @@
                             <rect key="frame" x="0.0" y="0.0" width="393" height="164"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain"/>
+                            <connections>
+                                <action selector="selectImage:" destination="-1" eventType="touchUpInside" id="gfb-9u-gak"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -97,6 +100,9 @@
                                     <rect key="frame" x="0.0" y="58" width="361" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <action selector="changeName:" destination="-1" eventType="editingChanged" id="V6e-zZ-mY2"/>
+                                    </connections>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bmM-8g-UyT">
                                     <rect key="frame" x="0.0" y="87" width="361" height="1"/>
