--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Profile/Edit/ProfileEditViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Profile/Edit/ProfileEditViewController.xib
@@ -49,6 +49,9 @@
                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain"/>
+                            <connections>
+                                <action selector="changeOrEditImageButtonView:" destination="-1" eventType="touchUpInside" id="DGG-56-jma"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -70,6 +73,9 @@
                     <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="12"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Editar o cambiar de foto"/>
+                    <connections>
+                        <action selector="changeOrEditImageButtonText:" destination="-1" eventType="touchUpInside" id="mmt-pK-q5P"/>
+                    </connections>
                 </button>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="ehM-ey-zn4">
                     <rect key="frame" x="16" y="280" width="361" height="312"/>
@@ -129,8 +135,9 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ykz-Gl-S7V">
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ykz-Gl-S7V">
                                     <rect key="frame" x="0.0" y="58" width="361" height="21"/>
+                                    <color key="backgroundColor" systemColor="tableSeparatorLightColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
@@ -161,6 +168,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="42"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
+                                    <connections>
+                                        <action selector="saveEdit:" destination="-1" eventType="touchUpInside" id="fvP-lc-7ap"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -189,6 +199,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="42"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain"/>
+                                    <connections>
+                                        <action selector="cancelEdit:" destination="-1" eventType="touchUpInside" id="aAP-Xk-7Mv"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -236,6 +249,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tableSeparatorLightColor">
+            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
