--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Edit/StashEditViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Stashes/Edit/StashEditViewController.xib
@@ -116,6 +116,9 @@
                                     <rect key="frame" x="0.0" y="58" width="361" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <action selector="changeName:" destination="-1" eventType="editingChanged" id="xME-zS-ter"/>
+                                    </connections>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WfZ-o8-Fan">
                                     <rect key="frame" x="0.0" y="87" width="361" height="1"/>
@@ -306,6 +309,9 @@
                             <rect key="frame" x="0.0" y="0.0" width="393" height="164"/>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain"/>
+                            <connections>
+                                <action selector="selectImage:" destination="-1" eventType="touchUpInside" id="QDu-BO-DmX"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
